proper server-side block placing with world edit support 3D vertex interpolation gradle version processing

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,8 @@ loader_version=0.14.9
 # Mod Properties
 mod_version=0.1
 maven_group=me.banana
-archives_base_name=entity_builder
+archives_base_name=entity-builder
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.58.0+1.19
+worldedit_version=7.3.0-SNAPSHOT
