--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,10 @@ repositories {
     // Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
     // See https://docs.gradle.org/current/userguide/declaring_repositories.html
     // for more information about repositories.
-    maven {
-        url "https://maven.enginehub.org/repo/"
-    }
+    maven { url "https://maven.enginehub.org/repo/" }
+    maven { url "https://maven.wispforest.io" }
+    maven { url "https://maven.terraformersmc.com/releases/" }
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -29,6 +30,15 @@ dependencies {
     // WorldEdit
     modImplementation "com.sk89q.worldedit:worldedit-core:${project.worldedit_version}"
     modImplementation "com.sk89q.worldedit:worldedit-fabric-mc${project.minecraft_version}:${project.worldedit_version}"
+
+    // OwoLib
+    annotationProcessor(modImplementation("io.wispforest:owo-lib:${project.owo_version}"))
+
+    // ModMenu
+    modImplementation("com.terraformersmc:modmenu:${project.modmenu_version}")
+
+    include(implementation("com.github.LlamaLad7:MixinExtras:${project.mixinextras_version}"))
+    annotationProcessor("com.github.LlamaLad7:MixinExtras:${project.mixinextras_version}")
 }
 
 processResources {
