--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,16 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx2G
-# Fabric Properties
-# check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19
-yarn_mappings=1.19+build.4
-loader_version=0.14.9
 # Mod Properties
-mod_version=0.1.0
+mod_version=0.2.0
 maven_group=me.banana
 archives_base_name=entity-builder
-# Dependencies
-# check this on https://modmuss50.me/fabric.html
+# Fabric Properties
+# check these on https://fabricmc.net/develop/
+minecraft_version=1.19
+yarn_mappings=1.19+build.4
+loader_version=0.14.11
 fabric_version=0.58.0+1.19
 worldedit_version=7.3.0-SNAPSHOT
 owo_version=0.8.2+1.19
 modmenu_version=4.0.4
-mixinextras_version=0.1.0
+mixinextras_version=0.1.1
