--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,12 @@
 plugins {
-    id 'fabric-loom' version '0.13-SNAPSHOT'
+    id 'fabric-loom' version '1.0-SNAPSHOT'
     id 'maven-publish'
 }
 
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
+
+archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
 
@@ -13,9 +17,9 @@ repositories {
     // See https://docs.gradle.org/current/userguide/declaring_repositories.html
     // for more information about repositories.
     maven { url "https://maven.enginehub.org/repo/" }
-    maven { url "https://maven.wispforest.io" }
+    maven { url "https://maven.wispforest.io/" }
     maven { url "https://maven.terraformersmc.com/releases/" }
-    maven { url 'https://jitpack.io' }
+    maven { url 'https://jitpack.io/' }
 }
 
 dependencies {
@@ -34,36 +38,23 @@ dependencies {
     // OwoLib
     annotationProcessor(modImplementation("io.wispforest:owo-lib:${project.owo_version}"))
 
+    // MixinExtras
     include(implementation("com.github.LlamaLad7:MixinExtras:${project.mixinextras_version}"))
     annotationProcessor("com.github.LlamaLad7:MixinExtras:${project.mixinextras_version}")
 }
 
 processResources {
-    filteringCharset "UTF-8"
-
     filesMatching("fabric.mod.json") {
         expand(project.properties)
     }
 }
 
-def targetJavaVersion = 17
 tasks.withType(JavaCompile).configureEach {
-    // ensure that the encoding is set to UTF-8, no matter what the system default is
-    // this fixes some edge cases with special characters not displaying correctly
-    // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
-    // If Javadoc is generated, this must be specified in that task too.
-    it.options.encoding = "UTF-8"
-    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
-        it.options.release = targetJavaVersion
-    }
+    // Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
+    it.options.release = 17
 }
 
 java {
-    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
-    if (JavaVersion.current() < javaVersion) {
-        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
-    }
-    archivesBaseName = project.archives_base_name
     // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
     // if it is present.
     // If you remove this line, sources will not be generated.
