--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,18 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx2G
+org.gradle.jvmargs=-Xmx1G
+org.gradle.parallel=true
 # Mod Properties
 mod_version=0.2.0
 maven_group=me.banana
 archives_base_name=entity-builder
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.19
-yarn_mappings=1.19+build.4
-loader_version=0.14.11
-fabric_version=0.58.0+1.19
-worldedit_version=7.3.0-SNAPSHOT
-owo_version=0.8.2+1.19
-modmenu_version=4.0.4
+minecraft_version=1.19.2
+yarn_mappings=1.19.2+build.28
+loader_version=0.14.12
+#Fabric api
+fabric_version=0.69.0+1.19.2
 mixinextras_version=0.1.1
+worldedit_version=7.3.0-SNAPSHOT
+owo_version=0.9.2+1.19
+modmenu_version=4.1.2
