--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,7 @@
 plugins {
-    id 'fabric-loom' version '1.0-SNAPSHOT'
+    id 'fabric-loom' version '1.7-SNAPSHOT'
     id 'maven-publish'
 }
-
-sourceCompatibility = JavaVersion.VERSION_17
-targetCompatibility = JavaVersion.VERSION_17
 
 archivesBaseName = project.archives_base_name
 version = project.mod_version
@@ -18,6 +15,8 @@ repositories {
     // for more information about repositories.
     maven { url "https://maven.enginehub.org/repo/" }
     maven { url "https://maven.wispforest.io/" }
+    maven { url "https://maven.shedaniel.me/" }
+    maven { url "https://maven.terraformersmc.com/releases/" }
     mavenCentral()
 }
 
@@ -34,24 +33,42 @@ dependencies {
     modImplementation "com.sk89q.worldedit:worldedit-core:${project.worldedit_version}"
     modImplementation "com.sk89q.worldedit:worldedit-fabric-mc${project.minecraft_version}:${project.worldedit_version}"
     // WorldEdit needs log4j
-    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
+    include(implementation('org.apache.logging.log4j:log4j-core:2.19.0'))
+
+    // AutoConfig
+    modApi("com.terraformersmc:modmenu:${project.modmenu_version}") {
+        transitive = false
+    }
 
     // OwoLib
     annotationProcessor(modImplementation("io.wispforest:owo-lib:${project.owo_version}"))
 }
 
 processResources {
+    filteringCharset "UTF-8"
     filesMatching("fabric.mod.json") {
         expand(project.properties)
     }
 }
 
+def targetJavaVersion = 17
 tasks.withType(JavaCompile).configureEach {
-    // Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
-    it.options.release = 17
+    // ensure that the encoding is set to UTF-8, no matter what the system default is
+    // this fixes some edge cases with special characters not displaying correctly
+    // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
+    // If Javadoc is generated, this must be specified in that task too.
+    it.options.encoding = "UTF-8"
+    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
+        it.options.release = targetJavaVersion
+    }
 }
 
 java {
+    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
+    if (JavaVersion.current() < javaVersion) {
+        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
+    }
+    archivesBaseName = project.archives_base_name
     // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
     // if it is present.
     // If you remove this line, sources will not be generated.
