--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,19 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
 # Mod Properties
-mod_version=0.2.1
+mod_version=0.3.0
 maven_group=me.banana
 archives_base_name=entity_sculptor
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
 minecraft_version=1.19.2
 yarn_mappings=1.19.2+build.28
-loader_version=0.14.12
-#Fabric api
-fabric_version=0.72.0+1.19.2
+loader_version=0.16.3
+# Fabric API
+fabric_version=0.77.0+1.19.2
 mixinextras_version=0.1.1
 worldedit_version=7.3.0-SNAPSHOT
 owo_version=0.9.2+1.19
 modmenu_version=4.1.2
+autoconfig_version=8.3.115
